--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "main": "build/app.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Ilingu/"
+    "url": "https://github.com/Ilingu/kahoot-bot"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
@@ -21,7 +21,6 @@
     "dev": "tsc-watch --project . --onSuccess \"nodemon ./dist/app.js\" --onFailure \"nodemon ./dist/app.js\""
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.11",
     "fastify": "^3.29.0",
     "puppeteer": "^14.2.1"
   },
