--- a/kahootbot-client/package.json
+++ b/kahootbot-client/package.json
@@ -1,22 +1,40 @@
 {
   "name": "kahootbot-client",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0-beta",
+  "author": "Ilingu",
+  "license": "MIT",
+  "keywords": [
+    "kahoot",
+    "bot",
+    "TypeScript",
+    "Svelte"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Ilingu/kahoot-bot"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
+  "type": "module",
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "@tsconfig/svelte": "^2.0.1",
+    "@zerodevx/svelte-toast": "^0.7.2",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "prettier": "^2.6.2",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.7",
     "svelte-preprocess": "^4.9.8",
+    "tailwindcss": "^3.0.24",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vite-plugin-pwa": "^0.12.0"
   }
 }
