--- a/kahootbot-client/package.json
+++ b/kahootbot-client/package.json
@@ -15,7 +15,7 @@
     "url": "https://github.com/Ilingu/kahoot-bot"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3001",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json"
@@ -36,5 +36,8 @@
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vite-plugin-pwa": "^0.12.0"
+  },
+  "dependencies": {
+    "socket.io-client": "^4.5.1"
   }
 }
